[ci] - Add step to wait cockroach to be up

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,6 +95,35 @@ jobs:
             sleep 5
         done
 
+    - name: Waiting for cockroach to be up
+      run: |
+        attempt_counter=0
+        max_attempts=10
+
+        until $(nc -vz localhost 26257 &> /dev/null); do
+            if [ ${attempt_counter} -eq ${max_attempts} ];then
+              echo "Max attempts reached"
+              exit 1
+            fi
+
+            printf '.'
+            attempt_counter=$(($attempt_counter+1))
+            sleep 5
+        done
+
+        attempt_counter=0
+
+        until $(curl --output /dev/null --silent --head --fail http://localhost:8090/#/overview/list); do
+            if [ ${attempt_counter} -eq ${max_attempts} ];then
+              echo "Max attempts reached"
+              exit 1
+            fi
+
+            printf '.'
+            attempt_counter=$(($attempt_counter+1))
+            sleep 5
+        done
+
     - name: Run unit testing
       run: |
         export COCKROACH_HOST=$(netstat -latn |grep 26257 |grep LISTEN |awk '{print $4}' | head -1)
