[ci] - Fix failed to split host:port in :::26257 cockroachdb url

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,8 +99,7 @@ jobs:
 
     - name: Run unit testing
       run: |
-        export COCKROACH_HOST=$(netstat -latn |grep 26257 |grep LISTEN |awk '{print $4}' | head -1)
-        export SYNKER_PG_URI="postgres://root:@${COCKROACH_HOST}/movr?sslmode=disable"
+        export SYNKER_PG_URI="postgres://root:@127.0.0.1:26257/movr?sslmode=disable"
         export SYNKER_ELASTICSEARCH_URI="http://127.0.0.1:9200"
         export SYNKER_KAFKA_URI="localhost:19092"
 
