--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         - '1.23.3'
     env:
       GOLANGCI_LINT_VERSION: 1.62.2
-      COCKROACHDB_VERSION: 24.1.1
+      COCKROACHDB_VERSION: 24.3.1
 
     steps:
     - uses: actions/checkout@v4 # https://github.com/actions/checkout/releases
@@ -54,7 +54,7 @@ jobs:
 
     - name: Start CockroachDB single node
       run: |
-        cockroach start-single-node --insecure --background --http-addr 0.0.0.0:8090
+        cockroach start-single-node --insecure --http-addr 0.0.0.0:8090 --background
         cockroach sql --insecure -e "SET CLUSTER SETTING kv.rangefeed.enabled = true;"
         cockroach workload run movr --duration=1m --init
 
