[ci] - Use kafka controller

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,6 +102,8 @@ jobs:
         export SYNKER_PG_URI="postgres://root:@127.0.0.1:26257/movr?sslmode=disable"
         export SYNKER_ELASTICSEARCH_URI="http://127.0.0.1:9200"
         export SYNKER_KAFKA_URI="localhost:19092"
+        # this is to find the correct controller for this cluster
+        export SYNKER_KAFKA_URI="localhost:$(rpk cluster metadata --brokers $SYNKER_KAFKA_URI |grep '*' | awk '{print $NF}')"
 
         mkdir -p .coverage/global
         SYNKER_LOG_LEVEL=debug go test -v ./... -cover -args -test.gocoverdir=$PWD/.coverage/global
